# mcp-servers

./: .gitignore  README.md  pyproject.toml
app/: README.md  app.py  main.py  pyproject.toml
app/obasan/: bootstrap.py  layouts.py
app/obasan/actions/: __init__.py  _stab.py  reset_button.py  save_button.py  state_button.py  translate_button.py
app/obasan/components/: __init__.py  input_url.py  markdown_content.py  reply_message.py  sent_message.py  server_notification.py  state_button.py
app/obasan/pages/: __init__.py  root.py
app/obasan/stores/: __init__.py  chat_messages.py  markdown.py  phase.py  url.py
app/obasan/workflows/: __init__.py  agents.py  events.py  inspection.py  llms.py  mcp_client.py
app/obasan/workflows/agents/: __init__.py  inspector.py  validator.py
app/obasan/workflows/structures/: __init__.py  markdown_output.py  url_validate_output.py
docs/: FAST-MCP.md  changelog.mdx  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docs/servers/transforms/: transforms.mdx
servers/: README.md  main.py  pyproject.toml  starter.py
servers/ojisan/: main.py
servers/ojisan/configs/: __init__.py  docs.py  root.py
servers/ojisan/models/: __init__.py  fileinfo.py  response.py
servers/ojisan/prompts/: __init__.py  file_inspect.py  tool_agent.py  url_validator.py
servers/ojisan/resources/: __init__.py  original.py
servers/ojisan/tools/: __init__.py  file_inspector.py  file_save.py  fileinfo.py  update_docs.py
servers/ojisan/utils/: __init__.py  docs.py  git.py
